# mark

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  annotatordialog.h  annotatordialog.ui  mark.pro  qannotator  qannotator.pro  res.qrc
src/: CMakeLists.txt  annotatordialog.cpp  annotatordialog.h  annotatordialog.ui  annotatoritem.cpp  annotatoritem.h  annotatorwidget.cpp  annotatorwidget.h  annotatorwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mark.cpp  mark.h  mark.ui  markedclass.h  polygon.cpp  polygon.h  polygonclass.cpp  polygonclass.h  resources.qrc  serializer.cpp  serializer.h  textannotatorwidget.cpp  textannotatorwidget.h  textannotatorwidget.ui  textcontainer.h
src/audio/: CMakeLists.txt
src/core/: CMakeLists.txt  markedclass.cpp  markedobject.cpp  markedobject.h  serializer.cpp  serializer.h
src/image/: CMakeLists.txt  imagecontainer.cpp  imagecontainer.h  imagepainter.cpp  imagepainter.h  polygon.cpp  polygon.h
src/qml/: ActionBox.qml  CustomMenuBar.qml  ItemList.qml  ItemViewer.qml  PolygonModel.qml  main.qml
src/text/: CMakeLists.txt  sentence.cpp  sentence.h  sentence_p.h  textcontainer.cpp  textpainter.cpp  textpainter.h
src/ui/: CMakeLists.txt  annotatorwidget.cpp  annotatorwidget.h  annotatorwidget.ui  container.cpp  container.h  mark.cpp  mark.h  mark.qrc  mark.ui  markedclass.cpp  markedclass.h  markedobject.cpp  markedobject.h  markedobject_p.h  markui.rc  painter.cpp  painter.h  serializer.cpp  serializer.h
src/util/: CMakeLists.txt  filenamehandler.cpp  filenamehandler.h  fileutils.cpp  fileutils.h  serializer.cpp  serializer.h
